--- a/css/style.css
+++ b/css/style.css
@@ -26,9 +26,17 @@ h1, h2
     justify-content: space-between;
 }
 
+.lead-text
+{
+    font-size: 32px;
+    font-weight: 900;
+}
+
 #slider_body
 {
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    font-size: 24px;
+    font-weight: 700;
 }
 
 .card:hover 
@@ -245,3 +253,17 @@ footer
         margin-left: 5px;
     }
 }
+
+.carousel-item>img
+{
+    filter: blur(8px);
+    -webkit-filter: blur(8px);
+    object-fit: cover;
+}
+
+/*
+#auto_photo
+{
+    background: url("img/Auto1920.jpg");
+}
+*/
