--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+html 
+{
+    scroll-behavior: smooth;
+}
+
 body 
 {
     font-family: 'Montserrat', sans-serif;
@@ -185,14 +190,20 @@ footer
     background-color: #ffffff;
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    padding: 20px;
     transition: transform 0.3s, box-shadow 0.3s;
+    height: 100%;
 }
 
 .about-card:hover 
 {
     transform: translateY(-5px);
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+}
+
+.row.text-center 
+{
+    display: flex;
+    flex-wrap: wrap;
 }
 
 #aboutUs .row div 
@@ -260,10 +271,3 @@ footer
     -webkit-filter: blur(8px);
     object-fit: cover;
 }
-
-/*
-#auto_photo
-{
-    background: url("img/Auto1920.jpg");
-}
-*/
