--- a/css/style.css
+++ b/css/style.css
@@ -19,11 +19,11 @@ h1, h2
     height: 25px;
 }
 
-@media (min-width: 992px)
+@media (min-width: 1200px)
 {
     .nav-link
     {
-        background: linear-gradient(currentColor 0 0) bottom /var(--d, 0) 3px no-repeat;
+        background: linear-gradient(currentColor 0 0) bottom /var(--d, 0) 2px no-repeat;
         transition: 0.5s;
     }
 
@@ -31,6 +31,11 @@ h1, h2
     {
         --d: 100%;
     }
+}
+
+.nav-link 
+{
+    font-size: 0.9rem;
 }
 
 .navbar 
