--- a/css/style.css
+++ b/css/style.css
@@ -33,9 +33,14 @@ h1, h2
     }
 }
 
-.nav-link 
+.nav-link, .button-link
 {
     font-size: 0.9rem;
+}
+
+.button-link-admin
+{
+    font-size: 0.5rem;
 }
 
 .navbar 
@@ -49,6 +54,11 @@ h1, h2
 .navbar.collapsed 
 {
     top: -100px;
+}
+
+.navbar-brand
+{
+    transition: transform 0.2s;
 }
 
 .scrollbar 
@@ -77,6 +87,16 @@ h1, h2
     overflow: hidden;
 }
 
+.big-text
+{
+    font-size: 1rem;
+}
+
+.big-text-card
+{
+    font-size: 0.875rem;
+}
+
 .card 
 {
     transition: transform 0.2s;
@@ -100,7 +120,7 @@ h1, h2
     font-weight: 700;
 }
 
-.card:hover 
+.card:hover, .navbar-brand:hover
 {
     transform: scale(1.05);
 }
