--- a/css/style.css
+++ b/css/style.css
@@ -23,13 +23,14 @@ h1, h2
 {
     .nav-link
     {
-        background: linear-gradient(currentColor 0 0) bottom /var(--d, 0) 2px no-repeat;
+        background: linear-gradient(currentColor 0 0) bottom /var(--d, 0) 1px no-repeat;
         transition: 0.5s;
     }
 
     .nav-link:hover 
     {
-        --d: 100%;
+        --d: 85%;
+        opacity: 0.7;
     }
 }
 
