--- a/css/style.css
+++ b/css/style.css
@@ -676,3 +676,24 @@ footer
         margin-bottom: 15px;
     }
 }
+
+@media (min-width: 768px) and (max-width: 992px) 
+{
+    .about-card:nth-child(3) 
+    {
+        margin-left: auto;
+        margin-right: auto;
+        float: none;
+    }
+
+    .row 
+    {
+        justify-content: center;
+    }
+
+    .col-lg-4.col-md-6.mb-4 
+    {
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+}
